# Projects

./: 2_billboard.ipynb  README.md  Untitled.ipynb  billboard.ipynb
3_crud_projects/: crudpy.sql
3_crud_projects/py_mongo/: utils.py
4_Covid_Engenharia/: workinprogres3.ipynb
5_events_site/: README.md  fake.py  pyproject.toml
5_events_site/dbt/: profiles.yml
5_events_site/dbt/events_model/: dbt_project.yml
5_events_site/dbt/events_model/models/mart/: conversions.sql
5_events_site/dbt/events_model/models/staging/: staging.yml  stg__events.sql
Covid_Engenharia/: docker-compose.yml  readme.md  workinprogres3.ipynb
Desafio_TEC_impulso/: CNES_Silas_Lino.ipynb  arquiteturafinal.excalidraw
crud_projects/py_sql/: utils.py
